Background relative urls

--- a/app/css/main.less
+++ b/app/css/main.less
@@ -44,17 +44,17 @@ p {
 	margin-bottom: 50px;
 	overflow: hidden;
 	background-attachment: fixed;
-	background-image: url("/images/top.jpg");
+	background-image: url("images/top.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
 #topimg {
-	background-image: url("/images/top.jpg");
+	background-image: url("images/top.jpg");
 }
 
 #bottomimg {
-	background-image: url("/images/defoe.jpg");	
+	background-image: url("images/defoe.jpg");	
 	height: 100vh;
 }
 
