Big General Update

--- a/app/css/main.less
+++ b/app/css/main.less
@@ -128,6 +128,11 @@ footer {
 	text-align: center;
 }
 
+#topimg {
+	margin-left: -100vw;
+	background-color: #000;
+}
+
 // Media specific
 @media screen and (max-width: 736px) {
 	.pull-quote-right, .pull-quote-left {
